--- a/solutions/02_inference.ipynb
+++ b/solutions/02_inference.ipynb
@@ -22,10 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -157,11 +155,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:daisy.datasets:write_roi is deprecated, please use write_size instead\n",
+      "INFO:daisy.datasets:Creating new affinities_small_500000.zarr\n",
+      "INFO:daisy.datasets:Creating new volumes/affs in affinities_small_500000.zarr\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read ROI in nm is [2880:6240, 5976:7944, 5176:7144] (3360, 1968, 1968)\n",
+      "Output ROI in nm is [3600:5520, 6400:7520, 5600:6720] (1920, 1120, 1120)\n",
+      "Read ROI in voxel space is [72:156, 1494:1986, 1294:1786] (84, 492, 492)\n",
+      "Output ROI in voxel space is [90:138, 1600:1880, 1400:1680] (48, 280, 280)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:gunpowder.tensorflow.local_server:Creating local tensorflow server\n",
+      "INFO:gunpowder.tensorflow.local_server:Server running at b'grpc://localhost:36831'\n",
+      "INFO:gunpowder.tensorflow.nodes.predict:Initializing tf session, connecting to b'grpc://localhost:36831'...\n",
+      "INFO:gunpowder.tensorflow.nodes.predict:Reading graph from ../../jan/segmentation/snapshots/setup58_p/train_net.meta and weights from ../../jan/segmentation/snapshots/setup58_p/train_net_checkpoint_500000...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ../../jan/segmentation/snapshots/setup58_p/train_net_checkpoint_500000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ../../jan/segmentation/snapshots/setup58_p/train_net_checkpoint_500000\n",
+      "WARNING:gunpowder.nodes.hdf5like_source_base:WARNING: You didn't set 'interpolatable' for RAW (dataset volumes/raw). Based on the dtype uint8, it has been set to True. This might not be what you want.\n",
+      "INFO:gunpowder.nodes.scan:scanning over 25 chunks\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting prediction...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:gunpowder.nodes.scan:processed chunk 1/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 2/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 3/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 4/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 5/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 6/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 7/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 8/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 9/25\n",
+      "INFO:gunpowder.nodes.print_profiling_stats:\n",
+      "Profiling Stats\n",
+      "===============\n",
+      "\n",
+      "NODE                METHOD    COUNTS    MIN       MAX       MEAN      MEDIAN    \n",
+      "Crop                prepare   10        0.00      0.00      0.00      0.00      \n",
+      "Crop                process   10        0.00      0.00      0.00      0.00      \n",
+      "IntensityScaleShift prepare   20        0.00      0.00      0.00      0.00      \n",
+      "IntensityScaleShift process   20        0.01      0.03      0.01      0.01      \n",
+      "N5Source                      10        0.32      1.12      0.71      0.61      \n",
+      "Normalize           prepare   10        0.00      0.00      0.00      0.00      \n",
+      "Normalize           process   10        0.01      0.02      0.01      0.01      \n",
+      "Pad                 prepare   10        0.00      0.00      0.00      0.00      \n",
+      "Pad                 process   10        0.00      0.01      0.00      0.00      \n",
+      "Predict             prepare   10        0.00      0.00      0.00      0.00      \n",
+      "Predict             process   10        0.30      6.36      0.91      0.30      \n",
+      "ZarrWrite           prepare   10        0.00      0.00      0.00      0.00      \n",
+      "ZarrWrite           process   10        0.17      0.66      0.54      0.61      \n",
+      "\n",
+      "TOTAL\n",
+      "upstream                      10        1.30      7.72      2.21      1.52      \n",
+      "downstream                    9         0.00      0.01      0.00      0.00      \n",
+      "\n",
+      "\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 10/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 11/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 12/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 13/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 14/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 15/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 16/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 17/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 18/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 19/25\n",
+      "INFO:gunpowder.nodes.print_profiling_stats:\n",
+      "Profiling Stats\n",
+      "===============\n",
+      "\n",
+      "NODE                METHOD    COUNTS    MIN       MAX       MEAN      MEDIAN    \n",
+      "Crop                prepare   10        0.00      0.00      0.00      0.00      \n",
+      "Crop                process   10        0.00      0.00      0.00      0.00      \n",
+      "IntensityScaleShift prepare   20        0.00      0.00      0.00      0.00      \n",
+      "IntensityScaleShift process   20        0.01      0.01      0.01      0.01      \n",
+      "N5Source                      10        0.32      0.64      0.51      0.62      \n",
+      "Normalize           prepare   10        0.00      0.00      0.00      0.00      \n",
+      "Normalize           process   10        0.01      0.01      0.01      0.01      \n",
+      "Pad                 prepare   10        0.00      0.00      0.00      0.00      \n",
+      "Pad                 process   10        0.00      0.00      0.00      0.00      \n",
+      "Predict             prepare   10        0.00      0.00      0.00      0.00      \n",
+      "Predict             process   10        0.30      0.30      0.30      0.30      \n",
+      "ZarrWrite           prepare   10        0.00      0.00      0.00      0.00      \n",
+      "ZarrWrite           process   10        0.38      0.53      0.43      0.42      \n",
+      "\n",
+      "TOTAL\n",
+      "upstream                      10        1.07      1.43      1.28      1.35      \n",
+      "downstream                    10        0.00      0.01      0.00      0.00      \n",
+      "\n",
+      "\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 20/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 21/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 22/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 23/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 24/25\n",
+      "INFO:gunpowder.nodes.scan:processed chunk 25/25\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction finished in 41.67\n"
+     ]
+    }
+   ],
    "source": [
     "logging.basicConfig(level=logging.INFO)\n",
     "logging.getLogger('gunpowder.nodes.hdf5like_write_base').setLevel(\n",
@@ -208,11 +343,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of blocks to be predicted 5227576\n",
+      "Prediction time 11689.441103153127 in days\n"
+     ]
+    }
+   ],
    "source": [
     "# Type your solution here\n",
     "# -------\n",
@@ -238,16 +380,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://184.105.98.58:40393/v/a574e98b2bfb02075db82f4c698df87b0cf260b7/\n"
+     ]
+    }
+   ],
    "source": [
     "import neuroglancer\n",
     "import funlib.show.neuroglancer as funlibng\n",
     "\n",
-    "ip_address = '' # Put your ip adress here\n",
+    "ip_address = '184.105.98.58' # Put your ip adress here\n",
     "neuroglancer.set_server_bind_address('0.0.0.0')\n",
     "viewer = neuroglancer.Viewer()\n",
     "\n",
@@ -272,11 +420,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'in_file' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-a8b0e7dfa3a1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mviewer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mneuroglancer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mViewer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mraw_ds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdaisy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen_ds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0min_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'volumes/raw'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0maffs_ds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdaisy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen_ds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_dataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'in_file' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import neuroglancer\n",
     "import funlib.show.neuroglancer as funlibng\n",
@@ -297,7 +455,7 @@
     "with viewer.txn() as s:\n",
     "    funlibng.add_layer(s, raw_ds, 'raw')\n",
     "    funlibng.add_layer(s, affs_ds, 'affs', shader='rgb')\n",
-    "    funlibng.add_layer(s, affs_ds_iter40000, 'affs_40000', shader='rgb')\n",
+    "#     funlibng.add_layer(s, affs_ds_iter40000, 'affs_40000', shader='rgb')\n",
     "if len(ip_address) == 0:\n",
     "    print('you first have to set the ip address of your paperspace machine')\n",
     "else:\n",
